--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "fcc-learn-npm-package-json",
   "author": "bernard ofoegbu",
-  "keywords": [ "freecodecamp", "projects", "software" ],
+  "keywords": [
+    "freecodecamp",
+    "projects",
+    "software"
+  ],
   "description": "recycles details of author's work",
+  "license": "MIT",
+  "version": "1.0",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "@freecodecamp/example": "^1.1.0"
   },
   "main": "server.js",
   "scripts": {
